// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`export-default.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (1,
2);

=====================================output=====================================
export default (1, 2);

================================================================================
`;

exports[`expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(a, b);

a, b

=====================================output=====================================
(a, b);

(a, b);

================================================================================
`;

exports[`ignore.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
+
  // prettier-ignore
  (
    (
      first
    )
    ,
    (
      last
    )
  )
;

=====================================output=====================================
+(
  // prettier-ignore
  ((
      first
    )
    ,
    (
      last
    ))
);

================================================================================
`;

exports[`ignored.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const a = ()=>()=>
// prettier-ignore
(a,b)

=====================================output=====================================
const a = () => () =>
  // prettier-ignore
  (a,b);

================================================================================
`;

exports[`parenthesized.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
console.log(
  /* 1 */
  (
    /* 2 */
    (
      /* 3 */
      first
      /* 4 */
    )
    /* 5 */
    ,
    /* 6 */
    (
      /* 7 */
      last
      /* 8 */
    )
    /* 9 */
  )
  /* 10 */
);

=====================================output=====================================
console.log(
  /* 1 */
  /* 2 */
  (/* 3 */
  first,
  /* 4 */
  /* 5 */
  /* 6 */
  /* 7 */
  last),
  /* 8 */
  /* 9 */
  /* 10 */
);

================================================================================
`;

exports[`return.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function a() {
  return (a, b);
  return a, b;
}

=====================================output=====================================
function a() {
  return (a, b);
  return (a, b);
}

================================================================================
`;
